--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,17 +1,13 @@
 name: CD Pipeline
-
 on:
   push:
     branches: [ main ]
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -23,7 +19,9 @@ jobs:
             git pull origin main
             source venv/bin/activate
             pip install --default-timeout=100 -r requirements.txt
+            # Find and kill the existing uvicorn process
             pkill -f "uvicorn main:app" || true
+            # Start uvicorn in the background with nohup
             nohup uvicorn main:app --host 0.0.0.0 --port 8000 > nohup.out 2>&1 &
             # Optional: Reload nginx in case of any config changes
             sudo systemctl reload nginx
