--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,17 +1,13 @@
 name: CD Pipeline
-
 on:
   push:
     branches: [ main ]
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -23,7 +19,12 @@ jobs:
             git pull origin main
             source venv/bin/activate
             pip install --default-timeout=100 -r requirements.txt
-            pkill -f "uvicorn main:app" || true
-            nohup uvicorn main:app --host 0.0.0.0 --port 8000 > nohup.out 2>&1 &
-            # Optional: Reload nginx in case of any config changes
+            # Kill existing Gunicorn process if running
+            if [ -f gunicorn.pid ]; then
+              kill -TERM $(cat gunicorn.pid) || true
+              rm gunicorn.pid
+            fi
+            # Start Gunicorn in the background
+            gunicorn main:app -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000 --pid gunicorn.pid --daemon --access-logfile access.log --error-logfile error.log
+            # Reload nginx
             sudo systemctl reload nginx
