--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,4 +21,10 @@ jobs:
             git pull origin main
             source venv/bin/activate
             pip install --default-timeout=100 -r requirements.txt:
+
+            # Restart the application
+            sudo systemctl daemon-reload
+            sudo systemctl restart fastapi
+
+            # Reload nginx
             sudo systemctl reload nginx
